# polling-application

./: README.md
.github/workflows/: ci-cd  ci-cd.yaml
client/: dockerfile  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts
client/src/app/: globals.css  layout.tsx  page.tsx
client/src/app/(auth)/login/: page.tsx
client/src/app/(auth)/register/: page.tsx
client/src/app/polls/create/: page.tsx
client/src/app/polls/manage/: page.tsx
client/src/app/polls/vote/: page.tsx
client/src/app/polls/vote/[pollId]/: page.tsx
client/src/components/: AuthModal.tsx  BackgroundContainer.tsx  Button.tsx  Modal.tsx  WelcomeComponent.tsx
client/src/components/navigation/: LoggedInComponent.tsx  NavigationBarComponent.tsx
client/src/components/polls/: CreatePoll.tsx  PollCard.tsx  PollCardSkeleton.tsx  VotePollCard.tsx
client/src/hooks/: useAuth.ts
client/src/middleware/: authMiddleware.ts
client/src/services/: authService.ts
client/src/store/: notificationStore.ts  userStore.ts
client/src/types/: poll.d.ts
client/src/utils/: axiosInstance.ts  handleApiErrors.ts
server/: .env  Cargo.toml  dockerfile
server/src/: api.rs  db.rs  error.rs  main.rs  models.rs
server/src/api/handler/: auth_routes.rs  mod.rs  poll_routes.rs
server/src/api/handler/middleware/: auth_middleware.rs
server/src/db/: db_config.rs  mod.rs  mongo_poll_repo.rs  mongo_user_repo.rs  poll_repository.rs  user_repository.rs
server/src/models/: auth_jwt.rs  authentication_state.rs  mod.rs  poll_models.rs  registration_state.rs  user_models.rs
