[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4.0"
mongodb = "2.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
env_logger = "0.10"
log = "0.4"
dotenv = "0.15"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
bson = { version = "2.8.0", features = ["chrono-0_4"] }
chrono = { version = "0.4", features = ["serde"] }
